[gd_scene load_steps=3 format=2]

[ext_resource path="res://ressources/themes/debug_gui_theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/debugMenu.gd" type="Script" id=2]

[node name="DebugMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
rect_min_size = Vector2( 3840, 2160 )
mouse_filter = 2
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CC" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="CC"]
margin_left = 1604.0
margin_top = 861.0
margin_right = 2235.0
margin_bottom = 1299.0

[node name="HB" type="HBoxContainer" parent="CC/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 624.0
margin_bottom = 431.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB1" type="VBoxContainer" parent="CC/PanelContainer/HB"]
margin_right = 609.0
margin_bottom = 424.0

[node name="DBG_CW_X_POLATE" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_right = 609.0
margin_bottom = 44.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_CW_X_POLATE"

[node name="DBG_CW_INB" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 48.0
margin_right = 609.0
margin_bottom = 92.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_CW_INB"

[node name="DBG_CW_WSTATE" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 96.0
margin_right = 609.0
margin_bottom = 140.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_CW_WSTATE"

[node name="DBG_CW_SRV_DELTA_INB" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 144.0
margin_right = 609.0
margin_bottom = 188.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_CW_SRV_DELTA_INB"

[node name="DBG_NET_PRINT_DEBUG" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 192.0
margin_right = 609.0
margin_bottom = 236.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_NET_PRINT_DEBUG"

[node name="DBG_DRAW_TANK_4_VECTORS" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 240.0
margin_right = 609.0
margin_bottom = 284.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_DRAW_TANK_4_VECTORS"

[node name="DBG_DRAW_TANK_ANGLE" type="CheckButton" parent="CC/PanelContainer/HB/VB1"]
margin_top = 288.0
margin_right = 609.0
margin_bottom = 332.0
custom_constants/check_vadjust = 0
custom_constants/hseparation = 20
text = "DBG_DRAW_TANK_ANGLE"

[node name="HBoxContainer" type="HBoxContainer" parent="CC/PanelContainer/HB/VB1"]
margin_top = 336.0
margin_right = 609.0
margin_bottom = 378.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CC/PanelContainer/HB/VB1/HBoxContainer"]
margin_top = 3.0
margin_right = 540.0
margin_bottom = 39.0
text = "DBG_CLI_SRV_LOST_PACKET_SEND :"

[node name="DBG_NET_SRV_LOST_PACKET_SEND" type="OptionButton" parent="CC/PanelContainer/HB/VB1/HBoxContainer"]
margin_left = 544.0
margin_right = 609.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0%"
items = [ "0%", null, false, 0, null, "100%", null, false, 1, null, "50%", null, false, 2, null, "25%", null, false, 4, null, "10%", null, false, 10, null, "5%", null, false, 20, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer2" type="HBoxContainer" parent="CC/PanelContainer/HB/VB1"]
margin_top = 382.0
margin_right = 609.0
margin_bottom = 424.0

[node name="Label" type="Label" parent="CC/PanelContainer/HB/VB1/HBoxContainer2"]
margin_top = 3.0
margin_right = 540.0
margin_bottom = 39.0
text = "DBG_CLI_CLI_LOST_PACKET_SEND :"

[node name="DBG_NET_CLI_LOST_PACKET_SEND" type="OptionButton" parent="CC/PanelContainer/HB/VB1/HBoxContainer2"]
margin_left = 544.0
margin_right = 609.0
margin_bottom = 42.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "0%"
items = [ "0%", null, false, 0, null, "100%", null, false, 1, null, "50%", null, false, 2, null, "25%", null, false, 4, null, "10%", null, false, 10, null, "5%", null, false, 20, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VB2" type="VBoxContainer" parent="CC/PanelContainer/HB"]
margin_left = 613.0
margin_right = 613.0
margin_bottom = 424.0

[node name="VB3" type="VBoxContainer" parent="CC/PanelContainer/HB"]
margin_left = 617.0
margin_right = 617.0
margin_bottom = 424.0

[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_CW_X_POLATE" to="." method="_on_DBG_CW_X_POLATE_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_CW_INB" to="." method="_on_DBG_CW_INB_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_CW_WSTATE" to="." method="_on_DBG_CW_WSTATE_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_CW_SRV_DELTA_INB" to="." method="_on_DBG_CW_SRV_DELTA_INB_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_NET_PRINT_DEBUG" to="." method="_on_DBG_NET_PRINT_DEBUG_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_DRAW_TANK_4_VECTORS" to="." method="_on_DBG_DRAW_TANK_4_VECTORS_toggled"]
[connection signal="toggled" from="CC/PanelContainer/HB/VB1/DBG_DRAW_TANK_ANGLE" to="." method="_on_DBG_DRAW_TANK_ANGLE_toggled"]
[connection signal="item_selected" from="CC/PanelContainer/HB/VB1/HBoxContainer/DBG_NET_SRV_LOST_PACKET_SEND" to="." method="_on_DBG_NET_SRV_LOST_PACKET_SEND_item_selected"]
[connection signal="item_selected" from="CC/PanelContainer/HB/VB1/HBoxContainer2/DBG_NET_CLI_LOST_PACKET_SEND" to="." method="_on_DBG_NET_CLI_LOST_PACKET_SEND_item_selected"]
